--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,9 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql
+  encoding: utf8
+  reconnect: false
+  database: flashcards_production
+  username: rails_flashcards
+  password: dare
